fixed weird overflow bug

--- a/css/style.css
+++ b/css/style.css
@@ -73,6 +73,7 @@ header > .navbar {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    overflow: hidden;
 
 }
 
